dataset1235/2025-2/1955397009/users/2154562864/executions/1107611404_4233865845.log
== SUBMISSION (2025-08-21 13:27:50)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * (9/5) + 32

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:25:59)
-- CODE: 
celsius = int(input())

fahrenheit = celsius * (9/5 + 32)

print(fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:26:43)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * (9/5 + 32)

print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-1352.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
-338.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
3380.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
684.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
0.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
1030.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:26:13)
-- CODE: 
celsius = int(input())

fahrenheit = celsius * (9/5 + 32)

print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
